<resources>
    <string name="app_name">Jeev</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_select_path">SelectPath</string>
    <string name="action_form">Form Based</string>
    <string name="action_question">Text Based</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="action_watson">Submit</string>
    <string name="size_label">Size</string>
    <string name="centimeter">cm</string>
    <string name="meter">m</string>
    <string name="inch">inch</string>
    <string name="feet">feet</string>
    <string name="body_color_label">Body Color</string>
    <string name="body_coat_label">Body Coat</string>
    <string name="pattern_on_body_label">Pattern on Body</string>
    <string name="can_swim">Can swim?</string>
    <string name="eating_habits_label">Eating Habits</string>
    <string name="teeth_label">Teeth</string>
    <string name="tail_label">Tail</string>
    <string name="native_label">Native To</string>
    <string name="nearby">Nearby?</string>
    <string name="carnivore">Carnivore</string>
    <string name="herbivore">Herbivore</string>
    <string name="omnivore">Omnivore</string>
    <string name="detritivore">Detritivore</string>
    <string name="not_sure">Not sure</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="action_ask_follow_up_question">Ask Follow Up Question</string>
    <string name="action_start_over">Start Over</string>
    <string name="answer_label">Your answer to the question is - </string>
    <string name="question_type_label">Select the type of question you\'d like to ask :</string>
    <string name="question_label">Input your question </string>
    <string name="title_activity_text_and_audio">TextAndAudioActivity</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
</resources>
