<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.jeev.cs8803.jeevapp.FormActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_label"
                android:textSize="10pt">
            </TextView>

            <EditText
                android:id="@+id/size_value"
                android:layout_height="wrap_content"
                android:hint="0.00"
                android:inputType="textPersonName"
                android:layout_width="wrap_content">
            </EditText>

            <Spinner
                android:id="@+id/size_units"
                android:layout_height="40px"
                android:prompt="@string/centimeter"
                android:layout_width="wrap_content"
                android:textColor="@color/colorLabel"
                android:textSize="10pt"
                android:entries="@array/size_unit_list">
            </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/body_color_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_color_label"
                    android:textSize="10pt">
                </TextView>

                <EditText
                    android:id="@+id/body_color_value"
                    android:layout_height="wrap_content"
                    android:hint="(eg. Orange)"
                    android:inputType="textPersonName"
                    android:layout_width="wrap_content">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/body_coat_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/body_coat_label"
                    android:textSize="10pt">
                </TextView>

                <EditText
                    android:id="@+id/body_coat_value"
                    android:layout_height="wrap_content"
                    android:hint="(eg. Long black stripes)"
                    android:inputType="textPersonName"
                    android:layout_width="wrap_content">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/pattern_on_body_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pattern_on_body_label"
                    android:textSize="10pt">
                </TextView>

                <EditText
                    android:id="@+id/pattern_on_body_value"
                    android:layout_height="wrap_content"
                    android:hint="(eg. Fur)"
                    android:inputType="textPersonName"
                    android:layout_width="wrap_content">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <CheckBox
                    android:id="@+id/can_swim_value"
                    android:layout_height="wrap_content"
                    android:text="@string/can_swim"
                    android:layout_width="fill_parent"
                    android:textSize="10pt">
                </CheckBox>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/eating_habits_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eating_habits_label"
                    android:textSize="10pt">
                </TextView>

                <Spinner
                    android:id="@+id/eating_habits_value"
                    android:layout_height="40px"
                    android:prompt="@string/centimeter"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorLabel"
                    android:textSize="10pt"
                    android:entries="@array/eating_habits_list">
                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/teeth_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teeth_label"
                    android:textSize="10pt">
                </TextView>

                <EditText
                    android:id="@+id/teeth_value"
                    android:layout_height="wrap_content"
                    android:hint="(eg. Sharp/Fanged)"
                    android:inputType="textPersonName"
                    android:layout_width="wrap_content">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tail_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tail_label"
                    android:textSize="10pt">
                </TextView>

                <EditText
                    android:id="@+id/tail_value"
                    android:layout_height="wrap_content"
                    android:hint="(eg. Long black furry tail)"
                    android:inputType="textPersonName"
                    android:layout_width="wrap_content">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <CheckBox
                    android:id="@+id/nearby"
                    android:layout_height="wrap_content"
                    android:text="@string/nearby"
                    android:layout_width="fill_parent"
                    android:textSize="10pt">
                </CheckBox>

            </LinearLayout>

            <Button
                android:id="@+id/select_question"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorButton"
                android:textColor="@color/colorLabel"
                android:text="@string/action_watson"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
